@@ -44,14 +44,6 @@
 namespace CLHEP {
 
 //
-//
-//
-static const double     pi  = 3.14159265358979323846;
-static const double  twopi  = 2*pi;
-static const double halfpi  = pi/2;
-static const double     pi2 = pi*pi;
-
-//
 // 
 //
 static const double Avogadro = 6.02214179e+23/mole;
